fixed jumpy border on merch card

--- a/css/main.css
+++ b/css/main.css
@@ -445,7 +445,7 @@ body {
 /* Merch Card */
 .box.merch-card {
   background-size: cover;
-  border: none;
+  border: 0.5px solid transparent;
   background-position: center center;
 }
 
